Fix layout bug on new program page, remove unneeded styles

--- a/django_code/program/static/program/new-program.css
+++ b/django_code/program/static/program/new-program.css
@@ -1,12 +1,5 @@
 body {
-    font-family: Helvetica, Arial, sans-serif;
-    margin: 0 auto;
     background: #f7faff;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    margin-top: 90px;
 
     width: 100%;
     height: calc(100% - 58px);
@@ -14,6 +7,10 @@ body {
     position: fixed;
     display: flex;
     align-items: center;
+}
+
+footer {
+    display: none !important;
 }
 
 #inner-wrapper {
